Actions
Bug #4804
closedapix & pcplusmp are nearly warning free already
Start date:
2014-04-25
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
needs-triage
Gerrit CR:
Description
The apix and pcplusmp makefiles disable a number of warnings needlessly. Other warnings are pretty easy to address.
This leaves -Wno-uninitialized. The code sadly is full of these and so I'm not addressing it.
Updated by Electric Monk over 8 years ago
- Status changed from New to Closed
- % Done changed from 80 to 100
git commit a833a696f1726fd5d95ded0820612f465a2dad8d
commit a833a696f1726fd5d95ded0820612f465a2dad8d Author: Josef 'Jeff' Sipek <josef.sipek@nexenta.com> Date: 2014-04-29T15:17:22.000Z 4804 apix & pcplusmp are nearly warning free already Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@omniti.com>
Actions